--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>
           I love music, management, to travel and to paint🎨. I launched Sur La Toile, a platform where you can interact with people about your favorite Monet and create constructive and captivating debates. 
         </p>
-        <a href="https://github.com/m-rmdni/landing.git" class="btn-blue">Discover Sur La Toile</a>
+        <a href="https://m-rmdni.github.io/landing/" class="btn-blue">Discover Sur La Toile</a>
       </div>
       <div class="card-white">
         <h2>Music 🎸</h2>
